--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: default
+title: Development Blog 
+subtitle: Front-End ve DevOps konuları üzerine yazılarım.
+lang: tr
+ref: index-page  
 ---
 
 <div class="posts">
